Quaere/src/main/java/org/quaere/dsl/parser/QuaereParser.java
package org.quaere.dsl.parser;
// $ANTLR 3.0.1 /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g 2007-09-09 23:12:32

import java.util.List;
import java.util.Arrays;
import java.util.ArrayList;

import org.quaere.expressions.*;


import org.antlr.runtime.*;


import org.antlr.runtime.tree.*;

@SuppressWarnings({"all"})
public class QuaereParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INTEGER", "FLOAT", "STRING", "ID", "LETTER", "DIGIT", "EscapeSequence", "HexDigit", "UnicodeEscape", "WS", "'['", "']'", "'?'", "':'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'.'", "'('", "')'", "','", "'=>'", "'create'", "'{'", "'='", "'}'", "'from'", "'in'", "'into'", "'where'", "'let'", "'join'", "'on'", "'equals'", "'orderby'", "'ascending'", "'descending'", "'select'", "'group'", "'by'", "'true'", "'false'"
    };
    public static final int INTEGER = 4;
    public static final int UnicodeEscape = 12;
    public static final int LETTER = 8;
    public static final int HexDigit = 11;
    public static final int EscapeSequence = 10;
    public static final int WS = 13;
    public static final int EOF = -1;
    public static final int STRING = 6;
    public static final int FLOAT = 5;
    public static final int DIGIT = 9;
    public static final int ID = 7;

    public QuaereParser(TokenStream input) {
        super(input);
    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() {
        return tokenNames;
    }
    public String getGrammarFileName() {
        return "/Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g";
    }


    public static class quaereExpression_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start quaereExpression
    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:21:1: quaereExpression returns [Expression name] : sourceExpression EOF ;
    public final quaereExpression_return quaereExpression() throws RecognitionException {
        quaereExpression_return retval = new quaereExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2 = null;
        expression_return expression1 = null;


        CommonTree EOF2_tree = null;

        try {
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:22:2: ( sourceExpression EOF )
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:22:4: sourceExpression EOF
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_expression_in_quaereExpression51);
                expression1 = expression();
                _fsp--;

                adaptor.addChild(root_0, expression1.getTree());
                EOF2 = (Token) input.LT(1);
                match(input, EOF, FOLLOW_EOF_in_quaereExpression53);
                retval.value = expression1.value;

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end quaereExpression

    public static class expression_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start sourceExpression
    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:25:1: sourceExpression returns [Expression name] : expressionItem ( '[' sourceExpression ']' )? ;
    @SuppressWarnings({"RedundantCast"})
    public final expression_return expression() throws RecognitionException {
        expression_return retval = new expression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal4 = null;
        Token char_literal6 = null;
        expressionItem_return expressionItem3 = null;

        expression_return expression5 = null;


        CommonTree char_literal4_tree = null;
        CommonTree char_literal6_tree = null;

        try {
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:26:2: ( expressionItem ( '[' sourceExpression ']' )? )
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:26:4: expressionItem ( '[' sourceExpression ']' )?
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_expressionItem_in_expression71);
                expressionItem3 = expressionItem();
                _fsp--;

                adaptor.addChild(root_0, expressionItem3.getTree());
                retval.value = expressionItem3.value;
                // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:26:54: ( '[' sourceExpression ']' )?
                int alt1 = 2;
                int LA1_0 = input.LA(1);

                if ((LA1_0 == 14)) {
                    alt1 = 1;
                }
                switch (alt1) {
                    case 1:
                        // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:26:55: '[' sourceExpression ']'
                    {
                        char_literal4 = (Token) input.LT(1);
                        match(input, 14, FOLLOW_14_in_expression76);
                        char_literal4_tree = (CommonTree) adaptor.create(char_literal4);
                        adaptor.addChild(root_0, char_literal4_tree);

                        pushFollow(FOLLOW_expression_in_expression78);
                        expression5 = expression();
                        _fsp--;

                        adaptor.addChild(root_0, expression5.getTree());
                        char_literal6 = (Token) input.LT(1);
                        match(input, 15, FOLLOW_15_in_expression80);
                        char_literal6_tree = (CommonTree) adaptor.create(char_literal6);
                        adaptor.addChild(root_0, char_literal6_tree);

                        retval.value = new Indexer(expressionItem3.value, retval.value);

                    }
                    break;

                }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end sourceExpression

    public static class expressionItem_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start expressionItem
    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:29:1: expressionItem returns [Expression name] : left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? ;
    public final expressionItem_return expressionItem() throws RecognitionException {
        expressionItem_return retval = new expressionItem_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal7 = null;
        Token char_literal8 = null;
        conditionalExpression_return left = null;

        conditionalExpression_return middle = null;

        conditionalExpression_return right = null;


        CommonTree char_literal7_tree = null;
        CommonTree char_literal8_tree = null;

        try {
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:30:2: (left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )? )
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:30:4: left= conditionalExpression ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_conditionalExpression_in_expressionItem103);
                left = conditionalExpression();
                _fsp--;

                adaptor.addChild(root_0, left.getTree());
                retval.value = left.value;
                // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:30:57: ( '?' middle= conditionalExpression ':' right= conditionalExpression )?
                int alt2 = 2;
                int LA2_0 = input.LA(1);

                if ((LA2_0 == 16)) {
                    alt2 = 1;
                }
                switch (alt2) {
                    case 1:
                        // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:30:59: '?' middle= conditionalExpression ':' right= conditionalExpression
                    {
                        char_literal7 = (Token) input.LT(1);
                        match(input, 16, FOLLOW_16_in_expressionItem109);
                        char_literal7_tree = (CommonTree) adaptor.create(char_literal7);
                        adaptor.addChild(root_0, char_literal7_tree);

                        pushFollow(FOLLOW_conditionalExpression_in_expressionItem113);
                        middle = conditionalExpression();
                        _fsp--;

                        adaptor.addChild(root_0, middle.getTree());
                        char_literal8 = (Token) input.LT(1);
                        match(input, 17, FOLLOW_17_in_expressionItem115);
                        char_literal8_tree = (CommonTree) adaptor.create(char_literal8);
                        adaptor.addChild(root_0, char_literal8_tree);

                        pushFollow(FOLLOW_conditionalExpression_in_expressionItem119);
                        right = conditionalExpression();
                        _fsp--;

                        adaptor.addChild(root_0, right.getTree());
                        retval.value = new TernaryExpression(left.value, middle.value, right.value);

                    }
                    break;

                }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end expressionItem

    public static class conditionalExpression_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start conditionalExpression
    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:33:1: conditionalExpression returns [Expression name] : left= booleanAndExpression ( '||' right= booleanAndExpression )* ;
    public final conditionalExpression_return conditionalExpression() throws RecognitionException {
        conditionalExpression_return retval = new conditionalExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal9 = null;
        booleanAndExpression_return left = null;

        booleanAndExpression_return right = null;


        CommonTree string_literal9_tree = null;


        BinaryExpression.OperatorType type = BinaryExpression.OperatorType.UNKNOWN;

        try {
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:37:2: (left= booleanAndExpression ( '||' right= booleanAndExpression )* )
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:37:4: left= booleanAndExpression ( '||' right= booleanAndExpression )*
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_booleanAndExpression_in_conditionalExpression146);
                left = booleanAndExpression();
                _fsp--;

                adaptor.addChild(root_0, left.getTree());
                retval.value = left.value;
                // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:37:56: ( '||' right= booleanAndExpression )*
                loop3:
                do {
                    int alt3 = 2;
                    int LA3_0 = input.LA(1);

                    if ((LA3_0 == 18)) {
                        alt3 = 1;
                    }


                    switch (alt3) {
                        case 1:
                            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:38:4: '||' right= booleanAndExpression
                        {
                            string_literal9 = (Token) input.LT(1);
                            match(input, 18, FOLLOW_18_in_conditionalExpression155);
                            string_literal9_tree = (CommonTree) adaptor.create(string_literal9);
                            adaptor.addChild(root_0, string_literal9_tree);

                            type = BinaryExpression.OperatorType.OR;
                            pushFollow(FOLLOW_booleanAndExpression_in_conditionalExpression165);
                            right = booleanAndExpression();
                            _fsp--;

                            adaptor.addChild(root_0, right.getTree());
                            retval.value = new BinaryExpression(type, retval.value, right.value);

                        }
                        break;

                        default:
                            break loop3;
                    }
                }
                while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end conditionalExpression

    public static class booleanAndExpression_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start booleanAndExpression
    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:43:1: booleanAndExpression returns [Expression name] : left= equalityExpression ( '&&' right= equalityExpression )* ;
    public final booleanAndExpression_return booleanAndExpression() throws RecognitionException {
        booleanAndExpression_return retval = new booleanAndExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal10 = null;
        equalityExpression_return left = null;

        equalityExpression_return right = null;


        CommonTree string_literal10_tree = null;


        BinaryExpression.OperatorType type = BinaryExpression.OperatorType.UNKNOWN;

        try {
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:47:2: (left= equalityExpression ( '&&' right= equalityExpression )* )
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:47:4: left= equalityExpression ( '&&' right= equalityExpression )*
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_equalityExpression_in_booleanAndExpression199);
                left = equalityExpression();
                _fsp--;

                adaptor.addChild(root_0, left.getTree());
                retval.value = left.value;
                // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:47:54: ( '&&' right= equalityExpression )*
                loop4:
                do {
                    int alt4 = 2;
                    int LA4_0 = input.LA(1);

                    if ((LA4_0 == 19)) {
                        alt4 = 1;
                    }


                    switch (alt4) {
                        case 1:
                            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:48:4: '&&' right= equalityExpression
                        {
                            string_literal10 = (Token) input.LT(1);
                            match(input, 19, FOLLOW_19_in_booleanAndExpression208);
                            string_literal10_tree = (CommonTree) adaptor.create(string_literal10);
                            adaptor.addChild(root_0, string_literal10_tree);

                            type = BinaryExpression.OperatorType.AND;
                            pushFollow(FOLLOW_equalityExpression_in_booleanAndExpression218);
                            right = equalityExpression();
                            _fsp--;

                            adaptor.addChild(root_0, right.getTree());
                            retval.value = new BinaryExpression(type, retval.value, right.value);

                        }
                        break;

                        default:
                            break loop4;
                    }
                }
                while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end booleanAndExpression

    public static class equalityExpression_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start equalityExpression
    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:53:1: equalityExpression returns [Expression name] : left= relationalExpression ( ( '==' | '!=' ) right= relationalExpression )* ;
    public final equalityExpression_return equalityExpression() throws RecognitionException {
        equalityExpression_return retval = new equalityExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal11 = null;
        Token string_literal12 = null;
        relationalExpression_return left = null;

        relationalExpression_return right = null;


        CommonTree string_literal11_tree = null;
        CommonTree string_literal12_tree = null;


        BinaryExpression.OperatorType type = BinaryExpression.OperatorType.UNKNOWN;

        try {
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:57:2: (left= relationalExpression ( ( '==' | '!=' ) right= relationalExpression )* )
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:57:4: left= relationalExpression ( ( '==' | '!=' ) right= relationalExpression )*
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_relationalExpression_in_equalityExpression250);
                left = relationalExpression();
                _fsp--;

                adaptor.addChild(root_0, left.getTree());
                retval.value = left.value;
                // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:57:56: ( ( '==' | '!=' ) right= relationalExpression )*
                loop6:
                do {
                    int alt6 = 2;
                    int LA6_0 = input.LA(1);

                    if ((LA6_0 == 20)) {
                        alt6 = 1;
                    }
                    else if ((LA6_0 == 21)) {
                        alt6 = 1;
                    }


                    switch (alt6) {
                        case 1:
                            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:58:4: ( '==' | '!=' ) right= relationalExpression
                        {
                            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:58:4: ( '==' | '!=' )
                            int alt5 = 2;
                            int LA5_0 = input.LA(1);

                            if ((LA5_0 == 20)) {
                                alt5 = 1;
                            }
                            else if ((LA5_0 == 21)) {
                                alt5 = 2;
                            }
                            else {
                                NoViableAltException nvae =
                                        new NoViableAltException("58:4: ( '==' | '!=' )", 5, 0, input);

                                throw nvae;
                            }
                            switch (alt5) {
                                case 1:
                                    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:58:6: '=='
                                {
                                    string_literal11 = (Token) input.LT(1);
                                    match(input, 20, FOLLOW_20_in_equalityExpression261);
                                    string_literal11_tree = (CommonTree) adaptor.create(string_literal11);
                                    adaptor.addChild(root_0, string_literal11_tree);

                                    type = BinaryExpression.OperatorType.EQUAL;

                                }
                                break;
                                case 2:
                                    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:59:6: '!='
                                {
                                    string_literal12 = (Token) input.LT(1);
                                    match(input, 21, FOLLOW_21_in_equalityExpression271);
                                    string_literal12_tree = (CommonTree) adaptor.create(string_literal12);
                                    adaptor.addChild(root_0, string_literal12_tree);

                                    type = BinaryExpression.OperatorType.NOT_EQUAL;

                                }
                                break;

                            }

                            pushFollow(FOLLOW_relationalExpression_in_equalityExpression283);
                            right = relationalExpression();
                            _fsp--;

                            adaptor.addChild(root_0, right.getTree());
                            retval.value = new BinaryExpression(type, retval.value, right.value);

                        }
                        break;

                        default:
                            break loop6;
                    }
                }
                while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end equalityExpression

    public static class relationalExpression_return extends ParserRuleReturnScope {
        public Expression value;
        CommonTree tree;
        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start relationalExpression
    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:64:1: relationalExpression returns [Expression name] : left= additiveExpression ( ( '<' | '<=' | '>' | '>=' ) right= additiveExpression )* ;
    public final relationalExpression_return relationalExpression() throws RecognitionException {
        relationalExpression_return retval = new relationalExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal13 = null;
        Token string_literal14 = null;
        Token char_literal15 = null;
        Token string_literal16 = null;
        additiveExpression_return left = null;

        additiveExpression_return right = null;


        CommonTree char_literal13_tree = null;
        CommonTree string_literal14_tree = null;
        CommonTree char_literal15_tree = null;
        CommonTree string_literal16_tree = null;


        BinaryExpression.OperatorType type = BinaryExpression.OperatorType.UNKNOWN;

        try {
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:68:2: (left= additiveExpression ( ( '<' | '<=' | '>' | '>=' ) right= additiveExpression )* )
            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:68:4: left= additiveExpression ( ( '<' | '<=' | '>' | '>=' ) right= additiveExpression )*
            {
                root_0 = (CommonTree) adaptor.nil();

                pushFollow(FOLLOW_additiveExpression_in_relationalExpression316);
                left = additiveExpression();
                _fsp--;

                adaptor.addChild(root_0, left.getTree());
                retval.value = left.value;
                // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:68:54: ( ( '<' | '<=' | '>' | '>=' ) right= additiveExpression )*
                loop8:
                do {
                    int alt8 = 2;
                    switch (input.LA(1)) {
                        case 22: {
                            alt8 = 1;
                        }
                        break;
                        case 23: {
                            alt8 = 1;
                        }
                        break;
                        case 24: {
                            alt8 = 1;
                        }
                        break;
                        case 25: {
                            alt8 = 1;
                        }
                        break;

                    }

                    switch (alt8) {
                        case 1:
                            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:69:4: ( '<' | '<=' | '>' | '>=' ) right= additiveExpression
                        {
                            // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:69:4: ( '<' | '<=' | '>' | '>=' )
                            int alt7 = 4;
                            switch (input.LA(1)) {
                                case 22: {
                                    alt7 = 1;
                                }
                                break;
                                case 23: {
                                    alt7 = 2;
                                }
                                break;
                                case 24: {
                                    alt7 = 3;
                                }
                                break;
                                case 25: {
                                    alt7 = 4;
                                }
                                break;
                                default:
                                    NoViableAltException nvae =
                                            new NoViableAltException("69:4: ( '<' | '<=' | '>' | '>=' )", 7, 0, input);

                                    throw nvae;
                            }

                            switch (alt7) {
                                case 1:
                                    // /Users/anders/IdeaProjects/q2/src/main/resources/Quaere.g:69:6: '<'
                                {
                                    char_literal13 = (Token) input.LT(1);
                                    match(input, 22, FOLLOW_22_in_relationalExpression327);
                                    char_literal13_tree = (CommonTree) adaptor.create(char_literal13);
                                    adaptor.addChild(root_0, char_literal13_tree);

                                    type = BinaryExpression.OperatorType.LESS_THAN;
